--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -378,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Milk prediction accuracy score: 0.365725292736\n"
+      "Milk prediction R^2 score: 0.365725292736\n"
      ]
     }
    ],
@@ -420,7 +420,7 @@
     "\n",
     "# TODO: Report the score of the prediction using the testing set\n",
     "score = regressor.score(X_test, y_test)\n",
-    "print label_column, 'prediction accuracy score:', score"
+    "print label_column, 'prediction R^2 score:', score"
    ]
   },
   {
@@ -451,7 +451,8 @@
     "<br/>\n",
     "<strong>Is this feature necessary for identifying customers' spending habits?</strong><br/>\n",
     "Yes, I think milk is part of grocery, so i expect in most cases/data both grocery and milk are correlated. <br/>\n",
-    "<br/>"
+    "<span style='background-color: yellow'>(Addition on reviewer request)</span><br/>\n",
+    "0.365 is a low score, it is hard to predict 'Milk' using other features, therefore this feature has unique features and it is relevance to identify customer spending habits.<br/>"
    ]
   },
   {
@@ -522,7 +523,8 @@
     "\n",
     "<strong>How is the data for those features distributed? </strong><br/>\n",
     "Hint: Is the data normally distributed? Where do most of the data points lie?<br/>\n",
-    "The data is not normally distributed, most of the data points are close the first princple component, capturing the pattern of the data, at almost y = 1x <br/>\n",
+    "<span style='background-color: yellow'>(Correction on reviewer request)</span><br/>\n",
+    "The data is not normally distributed, most of the data points are skewed to the bottom right by the outliers.<br/>\n",
     "<br/>"
    ]
   },
@@ -623,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1409,6 +1411,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The outliers in more than one feature: [128, 154, 65, 66, 75]\n"
+     ]
     }
    ],
    "source": [
@@ -1435,6 +1444,13 @@
     "    print \"Data points considered outliers for the feature '{}': {}\".format(feature, len(outlier_data))\n",
     "    display(log_data[~((log_data[feature] >= Q1 - step) & (log_data[feature] <= Q3 + step))])\n",
     "    \n",
+    "# which sample data point is outlier in not just one feature\n",
+    "import collections\n",
+    "outlier_counter = collections.Counter(all_outlier_data.index.values)\n",
+    "outlier_repeated = [o for o, c in outlier_counter.iteritems() if c > 1]\n",
+    "print \"The outliers in more than one feature:\", outlier_repeated\n",
+    "# [128, 154, 65, 66, 75]\n",
+    "\n",
     "# OPTIONAL: Select the indices for data points you wish to remove\n",
     "outliers  = []\n",
     "\n",
@@ -1495,7 +1511,12 @@
     "\n",
     "<strong>Are there any data points considered outliers for more than one feature based on the definition above? </strong>\n",
     "<br/>\n",
-    "Yes, there are outliers on all 6 features </br/>\n",
+    "<span style='background-color: yellow'>(Correction on reviewer request)</span><br/>\n",
+    "Yes, there were 5 data points which are outlier in more than one feature: <br/>\n",
+    "128, 154, 65, 66, 75<br/>\n",
+    "\n",
+    "(Old answer leave for ref only)<br/>\n",
+    "There are outliers on all 6 features </br/>\n",
     "\n",
     "<table>\n",
     "    <tr><th>Features</th><th>No of Outliers</th></tr>\n",
@@ -1507,7 +1528,7 @@
     "    <tr><td>Delicatessen</td><td>14</td></tr>\n",
     "    <tr style='color:red'><td>Total</td><td>48</td></tr>\n",
     "</table>\n",
-    " \t\t\t\n",
+    "<br/>\n",
     "\n",
     "<strong>Should these data points be removed from the dataset? </strong><br/>\n",
     "Yes, by removing the outliers the data will be less skewed, and data will be more normally distributed.\n",
@@ -1613,22 +1634,31 @@
     "<br/>\n",
     "\n",
     "<strong>Using the visualization provided above, discuss what the first four dimensions best represent in terms of customer spending.</strong><br/>\n",
+    "<span style='background-color: yellow'>(Correction on reviewer request)</span><br/>\n",
     "<br/>\n",
     "1st principal component - dimension 1<br/>\n",
-    "the highest feature weight just below 0.8 on Detergent_Paper, with Grocery and Milk just above 0.4 <br/>\n",
-    "This group of customers most likely shop in retailer (supermarkets) and grocery store for all their needs.<br/>\n",
-    "<br/>\n",
+    "- the highest positive feature weight is Detergent_Paper just below 0.8, with Grocery and Milk just above 0.4 <br/>\n",
+    "The customers shops a lot in retailer(supermarkets) and grocery store, will have high positive value in this feature/dimension.<br/>\n",
+    "- the highest negative feature weight is Frozen just below -0.1<br/>\n",
+    "There is no customer spending have a high negative value in this feature/dimension.<br/>\n",
+    "\n",
     "2nd principal component - dimension 2 <br/>\n",
-    "the highest feature weight just above 0.6 on Frozen, with Fresh 0.6 and Delicatessen close to 0.5<br/>\n",
-    "This group of customers likes fresh fruit and veg in markets, frozen food, also often eat at restaurants.<br/>\n",
-    "<br/>\n",
+    "- the highest positive feature weight is Frozen just above 0.6, with Fresh 0.6 and Delicatessen close to 0.5<br/>\n",
+    "The customers likes fresh fruit and veg in markets, frozen food at supermarket/grocery, also often eat at restaurants, will have high value in this feature/dimension.<br/>\n",
+    "- the highest negative feature weight is Detergent_Paper just below -0.05 <br/>\n",
+    "There is no customer spending have a high negative value in this feature/dimension.<br/>\n",
+    "\n",
     "3rd principal component - dimension 3<br/>\n",
-    "the highest feature weight about 0.6 on Delicatessen, and negative feature weight about -0.7 on Fresh<br/>\n",
-    "This group of customers dont eat fresh produce, it does not spend much on grocery either, they are probably a busy worker which dont have time to visit retailer (supermarkets). They probably always eat out, probably single / no children, with big disposable income.<br/>\n",
-    "<br/>\n",
+    "- the highest positive feature weight is Delicatessen about 0.6<br/>\n",
+    "The busy city workers that dont have time to visit retailer (supermarkets), probably always eat out, also maybe single / no children, with big disposable income, will have high value in this feature/dimension.<br/>\n",
+    "- the highest negative feature weight is Fresh at -0.7<br/>\n",
+    "The customers shop fresh fruit and veg from local markets, and spending on grocery, will have a high negative value in this feature/dimension.<br/>\n",
+    "\n",
     "4th principal component - dimension 4<br/>\n",
-    "the highest feature weight above 0.4 on Delicatessen, and negative feature weight close to 0.8 on Frozen <br/>\n",
-    "This group of customers do not like to buy frozen food, spend little on grocery, not a fan of retailer (supermarkets), but spend high on restaurants and like fresh produce from local markets.<br/>\n",
+    "- the highest positive feature weight is Delicatessen above 0.4<br/>\n",
+    "The customers spend high on restaurants and like fresh produce from local markets, will have high value in this feature/dimension.<br/>\n",
+    "- the highest negative feature weight is Frozen close to -0.8<br/>\n",
+    "The customers spend loads of frozen food from grocery or supermarket, will have a high negative value in this feature/dimension.<br/>\n",
     "<br/>\n"
    ]
   },
@@ -1745,7 +1775,7 @@
     "    <tr><td>No</td><td>sample index</td><td>max category value</td><td>establishment</td><td style='border-left:black 1px solid'>Dimension with highest log value</td><td>Dimension highest feature weight product</td><td style='font-weight:bold'>consistent?</td></tr>\n",
     "    <tr><td>0</td><td>181</td><td>fresh=112151</td><td>markets</td><td style='border-left:black 1px solid'>2(4.4300)</td><td>2=Frozen</td><td style='background-color:pink'>No</td></tr>\n",
     "    <tr><td>1</td><td>183</td><td>delicatessen=47943</td><td>restaurants</td><td style='border-left:black 1px solid'>2(5.3551)</td><td>2=Frozen</td><td style='background-color:pink'>No</td></tr>\n",
-    "    <tr><td>2</td><td>85</td><td>grocery=92780</td><td>retailers</td><td style='border-left:black 1px solid'>1(5.5275)</td><td>1=Detergents_Paper</td><td style='background-color:pink'>No</td></tr>\n",
+    "    <tr><td>2</td><td>85</td><td>grocery=92780</td><td>retailers(supermarkets)</td><td style='border-left:black 1px solid'>1(5.5275)</td><td>1=Detergents_Paper</td><td style='background-color:pink'>No</td></tr>\n",
     "</table>\n",
     "</DIV>"
    ]
@@ -2221,11 +2251,12 @@
     "\n",
     "<strong>What set of establishments could each of the customer segments represent?</strong><br/>\n",
     "There are two clusters (customer segments).<br/>\n",
+    "<span style='background-color: yellow'>(Correction on reviewer request)</span><br/>\n",
     "\n",
     "<table>\n",
-    "    <tr><td>Cluster</td><td>Establishments</td></tr>\n",
-    "    <tr><td>Segment 0</td><td>Grocery, Milk, Fresh</td></tr>\n",
-    "    <tr><td>Segment 1</td><td>Fresh</td></tr>\n",
+    "    <tr><td>Cluster</td><td>Product Category</td><td style='border-left: black 1px solid'>Establishments</td></tr>\n",
+    "    <tr><td>Segment 0</td><td>Grocery, Milk, Fresh</td><td style='border-left: black 1px solid'>retailers(supermarkets)</td></tr>\n",
+    "    <tr><td>Segment 1</td><td>Fresh</td><td style='border-left: black 1px solid'>markets</td></tr>\n",
     "</table>\n",
     "<br/>\n",
     "Segment 0 customers have a lot more spending power then Segment 1<br/>\n",
@@ -2274,32 +2305,33 @@
     "**Answer:**\n",
     "\n",
     "<strong>For each sample point, which customer segment from Question 8 best represents it?</strong><br/>\n",
-    "\n",
+    "<span style='background-color: yellow'>(Correction on reviewer request)</span><br/>\n",
     "<table>\n",
-    "    <tr><td>Sample point</td><td>index</td><td>cluster (customer segment)</td></tr>\n",
-    "    <tr><td>0</td><td>181</td><td>0</td></tr>\n",
-    "    <tr><td>1</td><td>183</td><td>0</td></tr>\n",
-    "    <tr><td>2</td><td>85</td><td>0</td></tr>\n",
+    "    <tr><td>Sample point</td><td>index</td><td>Cluster (customer segment)</td><td style='border-left: black 1px solid'>Establishments</td></tr>\n",
+    "    <tr><td>0</td><td>181</td><td>0</td><td style='border-left: black 1px solid'>retailers(supermarkets)</td></tr>\n",
+    "    <tr><td>1</td><td>183</td><td>0</td><td style='border-left: black 1px solid'>retailers(supermarkets)</td></tr>\n",
+    "    <tr><td>2</td><td>85</td><td>0</td><td style='border-left: black 1px solid'>retailers(supermarkets)</td></tr>\n",
     "</table>\n",
     "<br/>\n",
     "\n",
-    "All 3 samples i selected in Question 1 are in Cluster 0<br/>\n",
+    "All 3 samples i selected in Question 1 are in Cluster 0, the establishment is supermarkets.<br/>\n",
     "\n",
     "\n",
     "<strong>Are the predictions for each sample point consistent with this?*</strong><br/>\n",
     "\n",
-    "from Question 1<br/>\n",
+    "ref Question 1<br/>\n",
     "<table>\n",
     "    <tr><td>Sample point</td><td>index</td><td>column</td><td>establishment</td><td style='border-left:black 1px solid'>consistent with cluster?</td></tr>\n",
     "    <tr><td>0</td><td>181</td><td>fresh=112151</td><td>markets</td><td style='border-left:black 1px solid; background-color: #93FF93'>Yes (Segment 0 'Fresh' have a high value)</td></tr>\n",
     "    <tr><td>1</td><td>183</td><td>delicatessen=47943</td><td>restaurants</td><td style='border-left:black 1px solid; background-color: pink'>No - Segment 0 'Delicatessen' have low value 1186.0</td></tr>\n",
-    "    <tr><td>2</td><td>85</td><td>grocery=92780</td><td>retailers</td><td style='border-left:black 1px solid; background-color: #93FF93'>Yes (Segment 0 'Grocery' have a high value)</td></tr>\n",
+    "    <tr><td>2</td><td>85</td><td>grocery=92780</td><td>retailers(supermarkets)</td><td style='border-left:black 1px solid; background-color: #93FF93'>Yes (Segment 0 'Grocery' have a high value)</td></tr>\n",
     "</table>\n",
     "<br/>\n",
     "\n",
     "<div style='font-style: italic'>Analysis</div>\n",
     "I think sample index 183 inconsistent might be caused by the number of clusters i have selected: 2<br/>\n",
     "Given a higher number of clusters, there should be a new customer segment that have a high value of Delicatessen, and low value on other product categories.<br/>\n",
+    "Or maybe the Delicatessen is actually bought from supermarkets (serves hot/cooked food) instead of restaurants.\n",
     "\n"
    ]
   },
