--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -524,7 +524,7 @@
     "<strong>How is the data for those features distributed? </strong><br/>\n",
     "Hint: Is the data normally distributed? Where do most of the data points lie?<br/>\n",
     "<span style='background-color: yellow'>(Correction on reviewer request)</span><br/>\n",
-    "The data is not normally distributed, most of the data points are skewed to the bottom right by the outliers.<br/>\n",
+    "The data is not normally distributed, most of the data points are skewed to the bottom left by the outliers.<br/>\n",
     "<br/>"
    ]
   },
